// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OTUItem /> renders correctly when [verified=false] 1`] = `
<LinkContainer
  activeClassName="active"
  className="spaced"
  exact={false}
  key="test-1"
  replace={false}
  strict={false}
  to="/refs/123abc/otus/test-1"
>
  <ListGroupItem
    allowFocus={false}
    bsStyle="warning"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={7}
        sm={11}
        xs={11}
      >
        <strong>
          test-otu-1
        </strong>
        <small
          className="hidden-md hidden-lg text-muted"
          style={
            Object {
              "marginLeft": "5px",
            }
          }
        >
          TO1
        </small>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={4}
        smHidden={true}
        xsHidden={true}
      >
        TO1
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={1}
        sm={1}
        xs={1}
      >
        <Icon
          faStyle="fas"
          fixedWidth={false}
          name="tag"
          pullRight={true}
          tip="This OTU is unverified"
        />
      </Col>
    </Row>
  </ListGroupItem>
</LinkContainer>
`;

exports[`<OTUItem /> renders correctly when [verified=true] 1`] = `
<LinkContainer
  activeClassName="active"
  className="spaced"
  exact={false}
  key="test-2"
  replace={false}
  strict={false}
  to="/refs/123abc/otus/test-2"
>
  <ListGroupItem
    allowFocus={false}
    bsStyle={null}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={7}
        sm={11}
        xs={11}
      >
        <strong>
          test-otu-2
        </strong>
        <small
          className="hidden-md hidden-lg text-muted"
          style={
            Object {
              "marginLeft": "5px",
            }
          }
        >
          TO2
        </small>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={4}
        smHidden={true}
        xsHidden={true}
      >
        TO2
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={1}
        sm={1}
        xs={1}
      />
    </Row>
  </ListGroupItem>
</LinkContainer>
`;
